--- a/src/js/pages/HomePage/style.scss
+++ b/src/js/pages/HomePage/style.scss
@@ -6,4 +6,8 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: left bottom;
+
+  .text {
+    margin-top: 200px;
+  }
 }
