--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -29,8 +29,9 @@
   }
 
    .page {
-     margin-top: 130px;
-     height: calc(100vh - 130px);
+     //margin-top: 130px;
+     //margin-top: 14px;
+     height: calc(100vh - 115px);
      font-family: 'Montserrat';
      h1 {}
    }
